--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "animate.css": "^4.1.1",
     "axios": "^1.13.2",
+    "echarts": "^6.0.0",
     "element-plus": "^2.11.8",
     "marked": "^17.0.1",
     "pinia": "^3.0.4",
