--- a/nginx.conf.example
+++ b/nginx.conf.example
@@ -41,7 +41,7 @@ server {
 # =====================================
 # 
 # 1. 前端 API 请求说明：
-#    前端代码中 API 基础地址已经硬编码为：http://121.40.127.17:8090/api/v1
+#    前端代码中 API 基础地址已经硬编码为：https://martin88.xyz:8090/api/v1
 #    这意味着：
 #    - 前端会直接向后端服务器发起跨域请求
 #    - 后端服务器需要配置 CORS（跨域资源共享）允许前端域名访问
