--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,24 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# 环境变量（最最最重要）
+.env
+.env.*
+!.env.example
+!.env.production.example
+
+# 包管理器锁文件（强烈建议不提交）
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# 编辑器配置
+.vscode/
+.idea/
+
+# Vite/Vue 构建产物
+dist/
+node_modules/
+
+# 大文件（如果 china.json 很大，建议移到 public 文件夹）
+# src/assets/china.json
