--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^3.0.4",
     "typeit": "^8.8.7",
     "vue": "^3.5.24",
+    "vue-cropper": "^0.6.5",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
