--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,17 @@ jobs:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
       - name: Deploy to Server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT || 22 }}
+          script: |
+            rm -rf /var/www/blog/*
+            mkdir -p /var/www/blog
+
+      - name: Upload Files
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -39,7 +50,6 @@ jobs:
           source: "dist/*"
           target: "/var/www/blog"
           strip_components: 1
-          overwrite: true
 
       - name: Reload Nginx
         uses: appleboy/ssh-action@v1.0.3
