--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@types/dompurify": "^3.2.0",
     "animate.css": "^4.1.1",
     "axios": "^1.13.2",
+    "dompurify": "^3.3.1",
     "echarts": "^6.0.0",
     "element-plus": "^2.11.8",
     "marked": "^17.0.1",
