--- a/.env.development
+++ b/.env.development
@@ -18,10 +18,13 @@ VITE_DEFAULT_AVATAR=https://images.unsplash.com/photo-1633332755192-727a05c4013d
 # Hero 配置
 VITE_HERO_TITLE=看见
 VITE_HERO_BG_IMAGE=https://images.unsplash.com/photo-1490730141103-6cac27aaab94?q=80&w=2070&auto=format&fit=crop
+
+# 注意：如果网站启用了HTTPS，七牛云域名也必须配置为HTTPS，否则图片无法显示（Mixed Content错误）
+# 可以在后端 .env 文件中修改 QINIU_DOMAIN
 VITE_HERO_SENTENCES=相信美好，遇见美好。|生活明朗，万物可爱。|保持热爱，奔赴山海。
 
 # 社交链接
-VITE_SOCIAL_GITHUB=https://github.com/natsume37
+VITE_SOCIAL_GITHUB=https://github.com/natsume37/Blog-vue
 VITE_SOCIAL_GITEE=https://gitee.com/natsume37
 VITE_SOCIAL_EMAIL=1957074599@qq.com
 
