--- a/.env.production
+++ b/.env.production
@@ -20,7 +20,7 @@ VITE_HERO_BG_IMAGE=https://images.unsplash.com/photo-1490730141103-6cac27aaab94?
 VITE_HERO_SENTENCES=相信美好，遇见美好。|生活明朗，万物可爱。|保持热爱，奔赴山海。
 
 # 社交链接
-VITE_SOCIAL_GITHUB=https://github.com/natsume37
+VITE_SOCIAL_GITHUB=https://github.com/natsume37/Blog-vue
 VITE_SOCIAL_GITEE=https://gitee.com/natsume37
 VITE_SOCIAL_EMAIL=1957074599@qq.com
 
