--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.11.8",
     "marked": "^17.0.1",
     "pinia": "^3.0.4",
+    "qiniu-js": "^3.4.3",
     "typeit": "^8.8.7",
     "vue": "^3.5.24",
     "vue-cropper": "^0.6.5",
@@ -33,10 +34,7 @@
     "sass": "^1.94.2",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.2.5",
+    "vite": "^6.0.1",
     "vue-tsc": "^3.1.4"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
   }
 }
